--- a/Experimenting/file_system/Cargo.toml
+++ b/Experimenting/file_system/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tree"
+name = "file_system"
 version = "0.1.0"
 authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+walkdir = "0.2.9"
+same-file = "1.0.5" 
+glob = "0.3.0"
