--- a/Experimenting/Logging/debugging/Cargo.toml
+++ b/Experimenting/Logging/debugging/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "file_system"
+name = "debugging"
 version = "0.1.0"
 authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-walkdir = "0.2.9"
-same-file = "1.0.5"
-glob = "0.3.0"
-memmap = "0.7.0"
+log = "0.4.8"
+env_logger = "0.6.2"
+syslog = "4.0.1"
+chrono = "0.4.7"
+log4rs = "0.8.3"
