--- a/Experimenting/datetime/Cargo.toml
+++ b/Experimenting/datetime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "file_system"
+name = "datetime"
 version = "0.1.0"
 authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-walkdir = "0.2.9"
-same-file = "1.0.5"
-glob = "0.3.0"
-memmap = "0.7.0"
+chrono = "0.4.7"
