See overview.txt under Blog for continued objectives

--- a/Blog/blog/Cargo.toml
+++ b/Blog/blog/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gui_test"
+name = "blog"
 version = "0.1.0"
 authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
 edition = "2018"
