--- a/Advanced_Features_of_Rust/Macro_Rules/attribute_like_macros/Cargo.toml
+++ b/Advanced_Features_of_Rust/Macro_Rules/attribute_like_macros/Cargo.toml
@@ -1,17 +1,9 @@
 [package]
-name = "hello_macro_derive"
+name = "attribute_like_macros"
 version = "0.1.0"
 authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
 edition = "2018"
 
-[lib]
-proc-macro = true
-
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hello_macro = { path = "../hello_macro" }
-hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }
-syn = "1.0.5"
-quote = "1.0.2"
